tests/baselines/reference/privateNameInTypeQuery.errors.txt
tests/cases/conformance/classes/members/privateNames/privateNameInTypeQuery.ts(6,15): error TS2322: Type 'number' is not assignable to type 'string'.
tests/cases/conformance/classes/members/privateNames/privateNameInTypeQuery.ts(11,19): error TS18013: Property '#a' is not accessible outside class 'C' because it has a private identifier.


==== tests/cases/conformance/classes/members/privateNames/privateNameInTypeQuery.ts (2 errors) ====
    class C {
        #a = 'a';
    
        constructor() {
            const a: typeof this.#a = ''; // Ok
            const b: typeof this.#a = 1;  // Error
                  ~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
        }
    }
    
    const c = new C();
    const a: typeof c.#a = '';
                      ~~
!!! error TS18013: Property '#a' is not accessible outside class 'C' because it has a private identifier.
    